# mbt-cli

./: README.md  mbt-cli.py  pyproject.toml  requirements.txt
mbt_cli/: __init__.py  __main__.py  main.py
